--- a/Tests Unitaire et Mocks/nbproject/project.properties
+++ b/Tests Unitaire et Mocks/nbproject/project.properties
@@ -59,6 +59,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.people.jar=U:\\TPPerson\\doc
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
